# TsukuyomiDMX

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  DEVELOPER.md  README.md  README_ja_JP.md
.github/workflows/: build.yml
core/: Cargo.toml
core/src/: doc.rs  engine.rs  fixture.rs  fixture_def.rs  functions.rs  lib.rs
core/src/doc/: commands.rs  decider.rs  def_registry.rs  errors.rs  state.rs
core/src/doc/tests/: address_index.rs  commands.rs  current_max_address.rs  events.rs  fixture_defs.rs  functions.rs  helpers.rs  resolve.rs  universe_outputs.rs
core/src/functions/: chaser.rs  collection.rs  fader.rs  static_scene.rs
crates/ofl_schemes/: Cargo.toml  channel.rs  fixture.rs  fixture_redirect.rs  matrix.rs  plugin.rs  wheel_slot.rs
crates/ofl_schemes/test_fixtures/: adj_mega_tripar.json
crates/slint_model_ext/: Cargo.toml  README.md
crates/tree-sitter-tsukuyomidmx/: .oxfmtrc.json  Cargo.toml  grammar.js  package-lock.json  package.json  tree-sitter.json
crates/tree-sitter-tsukuyomidmx/bindings/rust/: build.rs  lib.rs
crates/tree-sitter-tsukuyomidmx/src/: grammar.json  node-types.json  parser.c
crates/tree-sitter-tsukuyomidmx/test/corpus/: example.tkd  module_declaration.txt  test.tkd
crates/tsukuyomidmx/: Cargo.toml  build.rs
crates/tsukuyomidmx/slint/: app-window.slint  global-state.slint  panel-left.slint  panel-right.slint  titlebar.slint  types.slint
crates/tsukuyomidmx/slint/containers/: fixture-def-panel.slint
crates/tsukuyomidmx/slint/parts/: texts.slint
crates/tsukuyomidmx/slint/views/: effect-editor-panel.slint  effect-tree-view.slint  faders-view.slint  function-editor-panel.slint  function-list-view.slint  parallel-function-view.slint  preview-2d.slint  sequence-function-view.slint  simple-function-view.slint  universe-view.slint
crates/tsukuyomidmx/slint/views/effects/: parallel-effect-single-view.slint  sequence-effect-single-view.slint  simple-effect-single-view.slint
crates/tsukuyomidmx/src/: app.rs  lib.rs  main.rs  models.rs  test_helpers.rs
crates/tsukuyomidmx/src/controllers/: fixture_list_view.rs
crates/tsukuyomidmx/src/models/: effect_editor.rs  effect_tree_view.rs  fixture.rs  fixture_def.rs  function_list_view.rs  manufacturer.rs  mod.rs  preview_2d.rs  universe.rs  universe_view.rs
crates/tsukuyomidmx/src/tea/: effect_tree_view.rs  fixture_list_view.rs  function_list_view.rs  preview_2d.rs  universe_view.rs
crates/tsukuyomidmx/src/tea/effect_editor/: mod.rs  simple_effect_single_view.rs
crates/tsukuyomidmx/src/ui_handlers/: effect_tree_view.rs  fixture_list_view.rs  mod.rs  preview_2d.rs  universe_view.rs
crates/tsukuyomidmx/src/ui_handlers/effect_editor/: mod.rs  simple_effect_single_view.rs
crates/tsukuyomidmx_core/: Cargo.toml
crates/tsukuyomidmx_core/src/: engine.rs  fixture.rs  fixture_def.rs  functions.rs  lib.rs  plugins.rs  universe.rs
crates/tsukuyomidmx_core/src/doc/: commands.rs  decider.rs  errors.rs  mod.rs  state.rs
crates/tsukuyomidmx_core/src/doc/tests/: decider.rs  fixtures.rs  helpers.rs
crates/tsukuyomidmx_core/src/effects/: mod.rs  parallel.rs  sequence.rs  simple.rs
crates/tsukuyomidmx_core/src/functions/: chaser.rs  mod.rs  parallel.rs  sequence.rs  simple.rs  timeline.rs
crates/tsukuyomidmx_core/src/plugins/: artnet.rs  mod.rs  ola.rs
crates/tsukuyomidmx_core/tests/: def_registry.rs  engine.rs
crates/tsukuyomidmx_core/tests/effects/: main.rs  sequence.rs
crates/tsukuyomidmx_dsl/: Cargo.toml  syntax_idea.md
crates/tsukuyomidmx_dsl/src/: lib.rs  parser.rs
crates/tsukuyomidmx_plugins/: Cargo.toml  build.rs
crates/tsukuyomidmx_plugins/src/: artnet.rs  lib.rs  ola.rs
crates/tsukuyomidmx_plugins/tests/: ola.rs
docs/: package.json  pnpm-lock.yaml  worker-configuration.d.ts  wrangler.jsonc
schemas/: Cargo.toml  capability.rs  definitions.rs  fixture.rs  gobo.rs  lib.rs  manufacturers.rs  matrix.rs  plugin.rs  wheel-slot.json  wheel_slot.rs
schemas/test_fixtures/: cameo_auro_spot_300.json
scripts/: create-appimage.sh
slint_model_ext/: Cargo.toml
slint_model_ext/src/: lib.rs  model.rs
ui/: Cargo.toml  build.rs
ui/slint/: app-window.slint
ui/slint/containers/: fixture-def-panel.slint
ui/slint/parts/: splitter.slint
ui/slint/views/: faders-view.slint  fixture-list-view.slint  preview-2d.slint  universe-view.slint
ui/src/: app.rs  lib.rs  models.rs  test_helpers.rs
ui/src/models/: fixture.rs  fixture_def.rs  manufacturer.rs  universe_view.rs
ui/src/tea/: fixture_list_view.rs  universe_view.rs
