[workspace]
members = [
    "crates/tsukuyomidmx",
    "crates/tsukuyomidmx_core",
    "crates/slint_model_ext",
    "crates/ofl_schemes",
    "crates/tsukuyomidmx_dsl",
    "crates/tsukuyomidmx_plugins",
]
resolver = "3"

[profile.release]
debug = true
panic = "unwind"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
bimap = "0.6.3"
derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
derive_more = "2.1.1"
dirs = "6.0.0"
itertools = "0.14.0"
paste = "1.0.15"
tracing = "0.1"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4"] }
wgpu = "28.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Slint dependencies
# Use forked version to use pre-release features
slint = { git = "https://github.com/taichi765/slint", default-features = true, features = [
    "std",
    "accessibility",
    "backend-default",
    "backend-winit",
    "renderer-femtovg-wgpu",
    "unstable-wgpu-28",
    "gettext",
] }
# Must match the version of slint, see https://github.com/slint-ui/slint/blob/master/internal/backends/winit/README.md
i-slint-backend-winit = { git = "https://github.com/taichi765/slint" }
i-slint-backend-testing = { git = "https://github.com/taichi765/slint" }
i-slint-core = { git = "https://github.com/taichi765/slint" }
slint-build = { git = "https://github.com/taichi765/slint" }


[patch."https://github.com/taichi765/slint"]
slint = { path = "../slint/api/rs/slint" }
i-slint-backend-winit = { path = "../slint/internal/backends/winit" }
i-slint-backend-testing = { path = "../slint/internal/backends/testing" }
i-slint-core = { path = "../slint/internal/core" }
slint-build = { path = "../slint/api/rs/build" }
