[package]
name = "tsukuyomi-core"
version = { workspace = true }
edition = "2024"

[dependencies]
artnet_protocol = "0.4.3"
bimap = "0.6.3"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }

uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
