[package]
name = "tsukuyomi-core"
version = { workspace = true }
edition = "2024"

[dependencies]
artnet_protocol = "0.4.3"
bimap = { workspace = true }
rayon = "1.11.0"
serde = { workspace = true }
serde_json = "1.0.149"

uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

ofl_schemas = { path = "../schemas" }
