[package]
name = "tsukuyomidmx"
version = { workspace = true }
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsukuyomidmx-core = { path = "../tsukuyomidmx_core" }

slint = { workspace = true }
i-slint-backend-winit = { workspace = true }
i-slint-core = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
derive-getters = { workspace = true }
dirs = { workspace = true }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
uuid = { workspace = true }
tracing = { workspace = true }
rfd = "0.17.2"
serde = { workspace = true }
serde_json = { workspace = true }
wgpu = { workspace = true }
derive_more = { workspace = true, features = ["debug"] }

[build-dependencies]
slint-build = { workspace = true }

[dev-dependencies]
i-slint-backend-testing = { workspace = true }
