[package]
name = "tsukuyomidmx-core"
version = { workspace = true }
edition = "2024"

[dependencies]
artnet_protocol = "0.4.3"
ola = { path = "../../libola-rs" }
ftdi = "0.1.3"

assert_matches = "1.5.0"
bimap = { workspace = true }
dirs = { workspace = true }
derive-getters = { workspace = true, features = ["auto_copy_getters"] }
derive_more = { workspace = true, features = ["debug", "deref"] }
itertools = { workspace = true }
paste = { workspace = true }
rayon = "1.11.0"
serde = { workspace = true }
serde_json = "1.0.149"

uuid = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
thiserror = { workspace = true }

ofl_schemas = { path = "../ofl_schemes" }
