[package]
name = "tsukuyomidmx-core"
version = { workspace = true }
edition = "2024"

[dependencies]
assert_matches = "1.5.0"
bimap = { workspace = true }
dirs = { workspace = true }
derive-getters = { workspace = true, features = ["auto_copy_getters"] }
derive_more = { workspace = true, features = ["debug", "deref"] }
itertools = { workspace = true }
paste = { workspace = true }
rayon = "1.11.0"
serde = { workspace = true }
serde_json = "1.0.149"
serde_with = "3.18.0"

uuid = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
thiserror = { workspace = true }

ofl_schemas = { path = "../ofl_schemes" }
