[package]
name = "tsukuyomidmx-core"
version = { workspace = true }
edition = "2024"

[dependencies]
assert_matches = "1.5.0"
bimap = { workspace = true }
dirs = { workspace = true }
derive-getters = { workspace = true, features = ["auto_copy_getters"] }
derive_more = { workspace = true, features = ["debug", "deref"] }
itertools = { workspace = true }
paste = { workspace = true }
rayon = "1.11.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.18.0"
tokio = { workspace = true, features = ["sync", "rt-multi-thread", "macros"] }

uuid = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

ofl_schemas = { path = "../ofl_schemes" }

[dev-dependencies]
tracing-subscriber = "0.3.0"
