[package]
name = "tsukuyomidmx-plugins"
edition = "2024"
version.workspace = true

[dependencies]
tsukuyomidmx-core = { path = "../tsukuyomidmx_core" }

artnet_protocol = "0.4.3"
ftdi = "0.1.3"
# Use forked version because original one is no longer maintained
ola = { git = "https://github.com/taichi765/libola-rs" }

anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[build-dependencies]
tonic-prost-build = "0.14.5"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "process"] }
